--- a/index.html
+++ b/index.html
@@ -129,8 +129,8 @@
             </div>
              <div class="card-footer d-flex justify-content-between align-items-center">
                 <div class="zz">
-                    <button id="addm" type="button" class="btn-outline-primary">add</button>
-                    <button id="deletem" type="button" class="btn-outline-danger">close</button>
+                    <button id="addm" type="button" class="btn-sm add">add</button>
+                    <button id="deletem" type="button" class="btn-sm nadd">close</button>
                     </div>
                     </div>
         </div>
