--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                          </div> 
                     <div class="card-footer d-flex justify-content-between align-items-center">
                     <button id="submit" type="submit" class="btn btn-sm add">add</button>
-                     <button id="update" type="button" class="btn-outline-primary d-none">update</button>
+                     <button id="update" type="button" class="btn-sm add d-none">update</button>
                     <button id="button" type="button" class="btn btn-sm nadd close1">close</button>
                     </div>
                     </div> 
