--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
         <div class="moviemodel d-none" id="moviemodel">
             <form id="moviemodel1">
                 <div class="card">
-                    <div class="card-header p-0 d-flex justify-content-between align-items-center">
-                        <h5 class="mb-0">Add Movie</h5>
+                    <div class="card-header p-2 d-flex justify-content-between align-items-center">
+                        <h5 class="p-0 mb-0">Add Movie</h5>
                         <span class="close1 cc">+</span>
 
                     </div> 
